[RF] upgrade libraries and java to 21 LTS